# Webserver-rust-with-Cpanel-custom

./: Cargo.toml  README.md
src/: deletefolder.js  main.rs
static/: cpanel.html  main.css
